--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ maximum-scale=1.0, user-scalable=0">
         <div class="header__logo">
           <a href="index.html">Gamix-<span>G</span></a>
         </div>
-        <nav class="header__menu" role="topMenu">
+        <nav class="header__menu">
           <ul class="header__list">
             <li><a class="header__link" href="#">Home</a></li>
             <li><a class="header__link" href="#">Games</a></li>
