--- a/index.html
+++ b/index.html
@@ -417,26 +417,26 @@ maximum-scale=1.0, user-scalable=0">
       <div class="carousel slider">
         <div class="carousel__item stream_item">
           <div class="stream_image">
-            <img src="images/stream/stream2.png" alt="">
+            <img src="images/stream/stream2.webp" alt="">
           </div>
           <div class="stream_image">
-            <img src="images/stream/stream1.png" alt="">
-          </div>
-        </div>
-        <div class="carousel__item stream_item">
-          <div class="stream_image">
-            <img src="images/stream/stream1.png" alt="">
-          </div>
-          <div class="stream_image">
-            <img src="images/stream/stream2.png" alt="">
+            <img src="images/stream/stream1.webp" alt="">
           </div>
         </div>
         <div class="carousel__item stream_item">
           <div class="stream_image">
-            <img src="images/stream/stream2.png" alt="">
+            <img src="images/stream/stream1.webp" alt="">
           </div>
           <div class="stream_image">
-            <img src="images/stream/stream1.png" alt="">
+            <img src="images/stream/stream2.webp" alt="">
+          </div>
+        </div>
+        <div class="carousel__item stream_item">
+          <div class="stream_image">
+            <img src="images/stream/stream2.webp" alt="">
+          </div>
+          <div class="stream_image">
+            <img src="images/stream/stream1.webp" alt="">
           </div>
         </div>
       </div>
